--- a/sass/components/_menus.scss
+++ b/sass/components/_menus.scss
@@ -151,7 +151,7 @@
       @include grid-span(6, 7, $output-style:'float');     
       @include respond-to("navigation smallest") {
         float: right;
-        width: 60%;    
+        width: 50%;    
       } 
       li {
         width: 33.33%;   
@@ -453,11 +453,11 @@
       width: 100%;
       float: left;      
       @include respond-to("navigation full") {
-        margin-top: 13em;
+        margin-top: 6em;
         margin-bottom: 4.5em;        
       }
       @include respond-to("navigation medium") {
-        margin-top: 8em;
+        margin-top: 4em;
         margin-bottom: 4.5em;        
       }   
       @include respond-to("navigation small") { // Mobile menu styles collapsed into toggle
